adjust div#parts_dropdown z-index from 2000 to 1001 this is to fix the stack arrangement between the parts_dropdown and the user's dropdown-menu

--- a/resources/assets/less/uniform-builder.less
+++ b/resources/assets/less/uniform-builder.less
@@ -3174,7 +3174,7 @@ div.header-container.main {
         height: 459px;
         background-color: #3d3d3d;
         overflow-y: scroll;
-        z-index: 2000;
+        z-index: 1001;
     }
 
     i.button_drop {
